trunk/Archive2/9e/b0ea1ecff1ff0a/output
main.cpp: In function 'int main(int, char**)':
main.cpp:16:13: error: call of overloaded 'foo(NULL)' is ambiguous
     foo(NULL);
             ^
main.cpp:16:13: note: candidates are:
main.cpp:3:6: note: void foo(int)
 void foo(int)
      ^
main.cpp:8:6: note: void foo(char*)
 void foo(char*)
      ^
